--- a/css/style.css
+++ b/css/style.css
@@ -1,193 +1,236 @@
-
-#menu{
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100px;
-  z-index: 7;
-  width: 100%;
-  padding: 0 10px 0 0;
-  margin: 0;
-  text-align: right;
+* {
+    transition: all 500ms ease-out;
+    -webkit-transition: all 500ms ease-out;
 }
 
-#menu li .active{
-  background:#666;
-  background: rgba(0,0,0, 0.5);
+html,
+body,
+section,
+.page {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    transition: all 1s cubic-bezier(.5, -0.005, 0.2, 1) !important;
+    -webkit-transition: all 1s cubic-bezier(.5, -0.005, 0.2, 1) !important;
+    color: #fff;
+    background: #374046;
+    overflow: hidden;
+}
+
+section {
+    width: 400%;
+}
+
+.page {
+    position: absolute;
+}
+
+#p1 {
+    left: 0;
+}
+
+#p2 {
+    left: 100%;
+    background: #FF5722;
+}
+
+#p3 {
+    left: 200%;
+    background: #8285E0;
+}
+
+#p4 {
+    left: 300%;
+    background: deeppink;
+}
+
+ul.menu-list {
+    position: fixed;
+    z-index: 1;
+}
+
+#t1:target .page#p1 {
+    transform: translateX(0);
+}
+
+#t2:target .page#p2 {
+    transform: translateX(-90%);
+}
+
+#t3:target .page#p3 {
+    transform: translateX(-190%);
+}
+
+#t4:target .page#p4 {
+    transform: translateX(-290%);
+}
+
+#t2:target .page#p1,
+#t3:target .page#p1,
+#t4:target .page#p1 {
+    background: black;
+}
+
+#t2:target .page#p1 .icon,
+#t3:target .page#p1 .icon,
+#t4:target .page#p1 .icon {
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
+}
+
+.icon {
+    color: #fff;
+    font-size: 32px;
+    display: block;
+}
+
+ul .icon:hover {
+    opacity: 0.6;
+}
+
+#p1 .icon .title {
+    margin-bottom: 20px;
+}
+
+#t2:target ul .icon,
+#t3:target ul .icon,
+#t4:target ul .icon {
+    transform: scale(.6);
+    transition-delay: .25s;
+}
+
+#t2:target #dos {
+    transform: scale(1.2) !important;
+}
+
+#t3:target #tres {
+    transform: scale(1.2) !important;
+}
+
+#t4:target #cuatro {
+    transform: scale(1.2) !important;
+}
+
+ul.menu-list {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    /*right: 0;*/
+    
+    margin: auto;
+    height: 280px;
+    width: 10%;
+    padding: 0;
+    text-align: center;
+}
+
+ul.menu-list li {
+    margin: 30px 0;
+}
+
+a {
+    text-decoration: none;
+    font-family: open sans, sans-serif;
+}
+
+.title,
+.hint {
+    font-family: open sans, sans-serif;
+    display: block;
+}
+
+.title {
+    font-size: 38px;
+}
+
+.hint {
+    font-size: 13px;
+}
+
+.hint a {
+    color: #EFFF06;
+    transition: all 250ms easet-out;
+}
+
+.hint a:hover {
+    color: #FFF;
+}
+
+.page .icon {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 10%;
+    left: 0;
+    width: 270px;
+    height: 170px;
+    margin: auto;
+    text-align: center;
+    font-size: 80px;
+    transform: translateX(360%);
+    line-height: 1.3;
+}
+
+.page#p1 .icon {
+    height: 220px;
+}
+
+.page#p1 .icon {
+    transform: translateX(0) !important;
+}
+
+#t2:target .page#p2 .icon {
+    transform: translateX(0) !important;
+    transition-delay: 1s;
+}
+
+#t3:target .page#p3 .icon {
+    transform: translateX(0) !important;
+    transition-delay: 1s;
+}
+
+#t4:target .page#p4 .icon {
+    transform: translateX(0) !important;
+    transition-delay: 1s;
+}
+
+.credit {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 10px;
+}
+
+.credit a {
+    color: #fff
+}
+
+li.menu span {
   color: #fff;
-}
-#menu li a{
-  text-decoration:none;
-  color: #554FAB;
-}
-#menu li.active a:hover{
-  color: #000;
-}
-#menu li:hover{
-  background: rgba(255,255,255, 0.8);
-}
-#menu li a,
-#menu li.active a{
-  padding: 9px 9px;
-  display:block;
-}
-#menu li.active a{
-  color: #fff;
+  font-size: 0.8em;
 }
 
-#menu ul{
-  list-style:none;
-  padding:0;
-  margin:0;
-}
-
-.list
-{
-  display: inline-block;
-  margin: 10px;
-  color: #000;
-  background: rgba(255,255,255, 0.5);
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  font-weight: 700;
-  font-family:  "Josefin Slab",Arial,"Myriad Pro";
-  padding: 0.15em 0.05em 0;
-  position: relative;
-  z-index: 1;
-  -webkit-transition:color 0.2s;
-  transition:color 0.2s;
-}
-
-.list:hover
-{
-  color: rgba(255,255,255,1);
-}
-
-.tooltip
-{
-  position: absolute;
-  z-index: 100;
-  width: 60px;
-  height: 30px;
-  border-radius: 50%;
-  background: #fff;
-  top: 100%;
-  left: 50%;
-  margin-left: -30px;
-  margin-top: 20px;
-  text-align: center;
-  padding-bottom: 25px;
-  color: #67B38E;
-  opacity:0;
-  -webkit-transition:opacity 0.3s,-webkit-transform 0.3s;
-  transition:opacity 0.3s,transform 0.3s;
-}
-.tooltip i
-{
-  opacity: 0;
-  -webkit-transition:opacity 0.3s;
-  transition:opacity 0.3s;
-  z-index: 99;
-  position: relative;
-  top:10px;
-}
-.tooltip:after
-{
-  display: block;
-  width: 30px;
-  height: 14px;
-  background: url(./../img/tooltip1.svg) no-repeat center center;
-  content: "";
-  position: absolute;
-  bottom: 93%;
-  left: 50%;
-  -webkit-transform: rotateX(180deg);
-  transform: rotateX(180deg);
-  margin-left: -15px;
-}
-
-.list-1 .tooltip
-{
-  -webkit-transform:translate3d(0,10px,0) rotate3d(0,1,0,90deg);
-  transform:translate3d(0,10px,0) rotate3d(0,1,0,90deg);
-  -webkit-transform-origin:50% 100%;
-  transform-origin:50% 100%;
-}
-.list-1 .tooltip i
-{
-  -webkit-transform:scale3d(0,0,1);
-  transform:scale3d(0,0,1);
-}
-.list-2 .tooltip
-{
-  -webkit-transform:translate3d(0,20px,0);
-  transform:translate3d(0,20px,0);
-}
-.list-2 .tooltip i
-{
-  -webkit-transform:translate3d(0,15px,0);
-  transform:translate3d(0,15px,0);
-}
-.list-3 .tooltip
-{
-  -webkit-transform:translate3d(0,10px,0) rotate3d(0,1,0,90deg);
-  transform:translate3d(0,10px,0) rotate3d(0,1,0,90deg);
-  -webkit-transform-origin:50% 100%;
-  transform-origin:50% 100%;
-}
-.list-3 .tooltip i
-{
-  -webkit-transform:scale3d(0,0,1);
-  transform:scale3d(0,0,1);
-}
-.list-4 .tooltip
-{
-  -webkit-transform:translate3d(0,-20px,0);
-  transform:translate3d(0,-20px,0);
-}
-.list-4 .tooltip i
-{
-  -webkit-transform:translate3d(0,-20px,0);
-  transform:translate3d(0,-20px,0);
-}
-.list-5 .tooltip
-{
-  -webkit-transform:scale3d(0,0,1);
-  transform:scale3d(0,0,1);
-}
-.list-5 .tooltip i
-{
-  -webkit-transform:scale3d(0,0,1);
-  transform:scale3d(0,0,1);
-}
-.list:hover .tooltip,
-.list:hover .tooltip i
-{
-  opacity: 1;
-  -webkit-transform:translate3d(0,0,0) rotate3d(1,1,1,0) scale3d(0,0,0);
-  transform:translate3d(0,0,0) rotate3d(1,1,1,0) scale3d(1,1,1);
-}
 
 #avatar {
   display: block;
-  height: 256px;
-  width: 256px;
+  width: 20%;
   margin: 30px auto;
   border: 5px #fff solid;
   border-radius: 50%;
-  box-shadow: 3px 3px 8px rgba(0, 115, 115, 0.6);
 }
 #title{
   font-family: Arial;
-  font-size: 65px;
+  font-size: 4em;
   color: #fff;
   text-align: center;
   margin: 10px auto;
-  text-shadow:3px 3px #22c3aa,5px 3px #aee2d9;
 }
 #add{
   font-family: Arial;
-  font-size: 20px;
+  font-size: 1.25em;
   font-weight: bold;
   color: #4C9B9B;
   text-align: center;
@@ -195,118 +238,226 @@
 }
 #subtitle{
   font-family: Arial;
-  font-size: 30px;
+  font-size: 1.5em;
   color: #4C9B9B;
   text-align: center;
   margin: 10px auto;
 }
 
-#section2{
-  position: relative;
+
+/*Style 'show menu' label button and hide it by default*/
+.show-menu {
+  color: #fff;
+  display: none;
 }
-.about_me,.cont{
-  display: inline-block; 
-  height: 30px;
-  width: 300px;
-  float: left;
-  font-size: 20px;
-  font-weight: 700;
-  font-family: "Josefin Slab",Arial,"Myriad Pro";
-  position: absolute;
-  top: 50px;
-  left: 150px;
-  letter-spacing: .15em;
-  cursor: pointer;
+
+/*Hide checkbox*/
+input[type=checkbox]{
+    display: none;
 }
-.pic img{
-  width: 360px;
-  height: 390px;
-  position: absolute;
-  left: 136px;
-  top: 140px;
-  border-radius: 25px;
-  border: 5px solid rgba(181, 255, 247, 0.8);
-  box-shadow: 6px 6px 5px rgba(208, 247, 247, 0.6);
+
+/*Show menu when invisible checkbox is checked*/
+input[type=checkbox]:checked ~ #menu{
+    display: block;
 }
-.infor{
- 
-  height: 205px;
-  margin: 5px auto;
-  padding:2px;
-  position: absolute;
-  top: 123px;
-  left: 520px;
-  color: rgb(109, 107, 140);
-  font-weight: 600;
+
+/* for nexus 4 and iphone landscape */
+/* the Google nexus Galaxy width 365px */
+/* the Google nexus  4 width 400px */
+@media screen and (min-width: 321px) and (max-width: 480px)  {
+
+  #avatar {
+    width: 50%;
+  }
 }
-.infor ul li {
-  list-style-type: none;
-  font-size: 18px
+
+
+/*Responsive Styles*/
+
+@media screen and (max-width : 760px){
+  /*Make dropdown links appear inline*/
+  ul.menu-list {
+    position: static;
+    display: none;
+  }
+  /*Create vertical spacing*/
+  li {
+    margin-bottom: 1px;
+  }
+  /*Make all menu links full width*/
+  ul.menu-list li, li a {
+    width: 100%;
+  }
+  /*Display 'show menu' link*/
+  .show-menu {
+    display:block;
+  }
+
+  #t1:target .page#p1 {
+      transform: translateX(0);
+  }
+
+  #t2:target .page#p2 {
+      transform: translateX(-100%);
+  }
+
+  #t3:target .page#p3 {
+      transform: translateX(-200%);
+  }
+
+  #t4:target .page#p4 {
+      transform: translateX(-300%);
+  }
+
 }
-.infor li span{
-  display: inline-block;
-  text-align: right;
-  width: 70px;
+
+/* menu */
+body {
+  background: -webkit-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+  /* Chrome 10+, Saf5.1+ */
+  
+  background: -moz-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+  /* FF3.6+ */
+  
+  background: -ms-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+  /* IE10 */
+  
+  background: -o-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+  /* Opera 11.10+ */
+  
+  background: linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+  /* W3C */
 }
-.infor ul li a{
-  text-decoration: none;
-  color: rgb(33, 122, 186);
-}
-.infor ul li a:hover{
-  color: yellow;
-  font-size: 1.1em;
-}
-.infor p{
-  font-size: 18px;
-  padding-left: 40px;
-  line-height: 1.5em;
-  color: rgb(109, 107, 140);
-}
-.skill{
-  position: absolute;
-  top: 123px;
-  right: 50px;
-  height: 205px;
-  margin: 5 auto;
-  padding:2px;
-}
-.skill p{
-  color: rgb(109, 107, 140);
-  font-weight: 600;
-  font-size: 18px;
-}
-.skill p span{
-  left: -21px;
-  width: 6px;
-  height: 6px;
-  border: 1px solid #0E6676;
+
+.parent2 {
+  top: 15px;
+  left: 15px;
+  position: fixed;
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  /*border-radius: 50%;*/
+  z-index: 20;
+/*  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+*/}
+
+.test1 {
+  width: 100%;
+  height: 100%;
+  background-color: dimGray;
   border-radius: 50%;
   position: absolute;
-  z-index: 1;
+  color: white;
+  text-align: center;
+  line-height: 70px;
+  z-index: 19;
+  transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  position: absolute;
 }
-.icon{
-  width: 50%;
-  height: 258px;
-  margin: 50px auto;
+
+.test2 {
+  width: 100%;
+  height: 100%;
+  background-color: none;
+  border-radius: 50%;
+  position: absolute;
+  color: white;
+  text-align: center;
+  line-height: 70px;
+  z-index: 19;
+  transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550) .2s;
 }
-.icon p{
+
+.test3 {
+  width: 100%;
+  height: 100%;
+  background-color: none;
+  border-radius: 50%;
+  position: absolute;
+  color: white;
+  text-align: center;
+  line-height: 70px;
+  transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550) .4s;
+}
+
+.test4 {
+  width: 100%;
+  height: 100%;
+  background-color: none;
+  border-radius: 50%;
+  position: absolute;
+  color: white;
+  text-align: center;
+  line-height: 70px;
+  transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550) .6s;
+}
+
+.mask2 {
+  top: 15px;
+  left: 15px;
+  width: 50px;
+  height: 50px;
+  background: #374046;
+  position: absolute;
+  z-index: 21;
+  color: #fff;
+  text-align: center;
+  line-height: 60px;
+  cursor: pointer;
+  position: fixed;
+}
+
+.show-menu .menu-icon {
+  color: white;
+  vertical-align: top;
+  margin: 10px;
+}
+
+#t2:target .mask2 {
+  background: #FF5722;
+}
+
+#t3:target .mask2 {
+  background: #593C1F;
+}
+
+#t4:target .mask2 {
+  background: deeppink;
+}
+
+
+.contact-icon{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 700px;
+  height: 120px;
+  margin: auto;
+  text-align: center;
+}
+.contact-icon p{
   font-family:  "Microsoft YaHei";
   font-size: 35px;
   color: rgb(210, 27, 207);
   margin: 10px 150px;
 }
-.icon p a{
+.contact-icon p a{
   text-decoration: none;
   color: #495EF0;
 }
-.icon li{
+.contact-icon li{
   width: 80px;
   height: 80px;
   margin: 20px;
   float: left;
   list-style-type: none;
 }
-.icon li img{
+.contact-icon li img{
   width: 80px;
   height: 80px;
   -webkit-border-radius: 50%;
@@ -315,108 +466,9 @@
   -webkit-transition: 0.4s ease-in;
   transition: 0.3s;
 }
-.icon li a:hover img{
+.contact-icon li a:hover img{
   -webkit-transform:rotate(360deg) scale3d(.8,.8,.8);
   transform:rotate(360deg) scale3d(.8,.8,.8);
   -webkit-transform-origin:50% 50%;
   transform-origin:50% 50%;
-}
-
-#section4 .slide .list-img {
-  text-align: center;
-}
-#section4 .slide .list-img .img {
-  width: 29%;
-  margin: 1%;
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-#section4 .slide .list-img .img span {
-  display: none;
-  font-size: 24px;
-  color: #FFF;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  bottom: 0;
-  z-index: -1;
-  opacity: 0;
-  padding-top: 20%;
-  background-color: #ff2922;
-  background-image: url("../img/enter.png");
-  background-repeat: no-repeat;
-  background-position: center 60%;
-}
-.has-animate #section4 .slide .list-img .img span {
-  display: block;
-}
-#section4 .slide .list-img .img span.animate {
-  transition: all 0.5s ease;
-}
-#section4 .slide .list-img .img span.animate.left,
-#section4 .slide .list-img .img span.animate.right,
-#section4 .slide .list-img .img span.animate.top,
-#section4 .slide .list-img .img span.animate.bottom {
-  opacity: 1;
-  z-index: 1;
-}
-#section4 .slide .list-img .img span.left {
-  -webkit-transform: translateX(-100%);
-  -moz-transform: translateX(-100%);
-  -o-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-#section4 .slide .list-img .img span.right {
-  -webkit-transform: translateX(100%);
-  -moz-transform: translateX(100%);
-  -o-transform: translateX(100%);
-  -ms-transform: translateX(100%);
-  transform: translateX(100%);
-}
-#section4 .slide .list-img .img span.top {
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  -o-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%);
-}
-#section4 .slide .list-img .img span.bottom {
-  -webkit-transform: translateY(100%);
-  -moz-transform: translateY(100%);
-  -o-transform: translateY(100%);
-  -ms-transform: translateY(100%);
-  transform: translateY(100%);
-}
-#section4 .slide .list-img .img img {
-  display: block;
-  width: 100%;
-}
-#section4 .slide .list-img .img:hover span {
-  transition: none;
-  z-index: 10;
-  opacity: 1;
-}
-#section4 .slide .list-img .img:hover span.animate {
-  transition: all 0.5s ease;
-}
-#section4 .askme {
-  position: absolute;
-  display: none;
-  margin-top: -209px;
-  width: 400px;
-  left: 50%;
-  margin-left: -200px;
-  height: 477px;
-}
-
-
-.section{
-  background: -webkit-gradient(linear, top left, bottom left, from(#FFCAFA), to(#24F7E7));
-  background: -webkit-linear-gradient(#FFCAFA, #24F7E7);
-  background: linear-gradient(#FFCAFA,#24F7E7);
 }
