--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,8 @@ body {
 }
 
 #t2:target .mask2 {
-  background: #8285E0;
+  background: #fff;
+  color: #03213a;
 }
 
 #t3:target .mask2 {
@@ -454,7 +455,6 @@ body {
   height: 100%;
 }
 
-
 .container{
   width:90%;
   height:100%;
@@ -474,7 +474,7 @@ body {
   width: 320px;
   height: 250px;
 }
-.face.front{background:#000;}
+.face.front{background:#FF5722;}
 
 .face.back {
   display: block;
@@ -483,9 +483,15 @@ body {
   padding: 20px;
   color: white;
   text-align: left;
-  background-color: #333;
+  background-color: #FF5722;
 }
 
+.face.back p {
+  font-size: 15px;
+  text-indent: 30px;
+}
+
+/* flip card */
 .container{
   perspective: 800px;
   -webkit-perspective: 800px;
@@ -503,6 +509,7 @@ body {
 }
 .face {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .face.back {
@@ -523,11 +530,55 @@ body {
   text-decoration:none;
 }
 .card a.btn.btn-outline:hover{
-  background:#222;
+  background: #F94006;
   border:1px solid transparent;
 }
 
 .card .flip-img{
   width: 320px;
   height: 250px;
+}
+
+.card {
+  border-radius: 5px;
+  border: 4px solid #fff;
+  box-shadow: 0px 0px 10px #656060;
+}
+
+/*tooltip*/
+a.tooltips {
+  position: relative;
+  display: inline;
+}
+a.tooltips span {
+  position: absolute;
+  width: 200px;
+  color: #FFFFFF;
+  background: #00B3FF;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  visibility: hidden;
+  border-radius: 6px;
+  box-shadow: 0px 0px 3px #0D805D;
+}
+a.tooltips span:after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -8px;
+  width: 0; height: 0;
+  border-top: 8px solid #00B3FF;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+}
+a:hover.tooltips span {
+  visibility: visible;
+  opacity: 0.8;
+  bottom: 85px;
+  left: 20%;
+  margin-left: -76px;
+  z-index: 999;
+}
 }
