--- a/projects/FY/css/style.css
+++ b/projects/FY/css/style.css
@@ -1,5 +1,5 @@
 html,body,.header,.logo,.serach,.login,.nav,.main_works,.works_list,.main_author,
-.authors,.authors_list,.authors_cont,.footer{
+.authors,.authors_cont,.footer{
 	margin: 0;
 	padding:0;
 }
@@ -205,13 +205,17 @@ h2{
 	width: 960px;
 	height: auto;
 }
+.authors_list{
+	margin-top:-30px;
+	padding:0; 
+}
 .authors_list li{
 	float: left;
 	list-style-type: none;
 	background: #FAF7F7;
 	width: 294px;
 	position: relative;
-	margin:30px 26px 30px 0px;
+	margin:10px 26px 30px 0px;
 }
 .authors_list li img{
 	width: 294px;
